update user method

--- a/app/views/my_account/_my_profile.html.erb
+++ b/app/views/my_account/_my_profile.html.erb
@@ -66,7 +66,7 @@
     <br>
     <div class="my-preferences-content">
       <div class="filters-profile">
-        <%= form_tag my_account_path, method: :patch do %>
+        <%= form_tag my_account_path, method: :patch, remote: true do %>
           <% @tags.each do |preference|%>
             <%= check_box_tag 'preference[]', preference.name, false, class:( @user.preference_list.include?(preference.name) ? "filter-tags-profile-active" : "filter-tags-profile"), id: preference.name %>
             <label for="<%= preference.name%>"><%= preference %></label>
