show page updates

--- a/app/assets/stylesheets/utilities/_custom_container.scss
+++ b/app/assets/stylesheets/utilities/_custom_container.scss
@@ -35,7 +35,7 @@
   height: 582px;
   overflow-y: scroll;
   scrollbar-color: $secondarycolor;
-  justify-items: center;
+  justify-items: left;
   margin-top: 22px;
 }
 
