--- a/app/views/shared/_translator.html.erb
+++ b/app/views/shared/_translator.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-5 pt-4 border-top" data-controller="translator">
-  <h5>Dictionary</h5>
+  <h5 class="pink-text">Dictionary</h5>
   <form data-action="click->translator#search">
     <div class="d-flex flex-column align-items-end">
       <div class="d-flex w-100">
