--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -17,7 +17,7 @@
     <div class="sidebar">
       <%= render "shared/reviews", resource: @resource %>
       <%= render "shared/translator" %>
-      <div class="mt-5 pt-4 border-top blue-text">
+      <div class="mt-5 pt-4 border-top pink-text">
         <h5 class="blue-text">You may also be interested in...</h5>
       </div>
       <div class="related-container">
