--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -18,7 +18,7 @@
       <%= render "shared/reviews", resource: @resource %>
       <%= render "shared/translator", word: @word %>
       <div class="mt-5 pt-4 border-top">
-        <h5 class="blue-text">You may also be interested in...</h5>
+        <h5 class="pink-text">You may also be interested in...</h5>
       </div>
       <div class="related-container">
         <%= render @related_resources %>
