--- a/app/views/my_account/_my_profile.html.erb
+++ b/app/views/my_account/_my_profile.html.erb
@@ -47,17 +47,17 @@
     <h5>Media format</h5>
     <br>
     <div class="my-preferences-format">
-      <div class="my-format-preferences-card" onclick="this.style.border='2px solid #F18889';event.preventDefault();">
-        <i class="fa-solid fa-video format-icon" onclick="this.style.color='#F18889';event.preventDefault();"></i>
+      <div class="my-format-preferences-card" onclick="this.style.border='2px solid #83B3E1';event.preventDefault();">
+        <i class="fa-solid fa-video format-icon" onclick="this.style.color='#83B3E1';event.preventDefault();"></i>
       </div>
-      <div class="my-format-preferences-card" onclick="this.style.border='2px solid #F18889';event.preventDefault();">
-        <i class="fa-solid fa-podcast format-icon" onclick="this.style.color='#F18889';event.preventDefault();"></i>
+      <div class="my-format-preferences-card" onclick="this.style.border='2px solid #83B3E1';event.preventDefault();">
+        <i class="fa-solid fa-podcast format-icon" onclick="this.style.color='#83B3E1';event.preventDefault();"></i>
       </div>
-      <div class="my-format-preferences-card" onclick="this.style.border='2px solid #F18889';event.preventDefault();">
-        <i class="fa-solid fa-music format-icon" onclick="this.style.color='#F18889';event.preventDefault();"></i>
+      <div class="my-format-preferences-card" onclick="this.style.border='2px solid #83B3E1';event.preventDefault();">
+        <i class="fa-solid fa-music format-icon" onclick="this.style.color='#83B3E1';event.preventDefault();"></i>
       </div>
-      <div class="my-format-preferences-card" onclick="this.style.border='2px solid #F18889';event.preventDefault();">
-        <i class="fa-brands fa-readme format-icon" onclick="this.style.color='#F18889';event.preventDefault();"></i>
+      <div class="my-format-preferences-card" onclick="this.style.border='2px solid #83B3E1';event.preventDefault();">
+        <i class="fa-brands fa-readme format-icon" onclick="this.style.color='#83B3E1';event.preventDefault();"></i>
       </div>
     </div>
     <br>
