--- a/app/assets/stylesheets/components/_my_account_container.scss
+++ b/app/assets/stylesheets/components/_my_account_container.scss
@@ -68,9 +68,9 @@
 }
 
 .my-format-preferences-card {
-  color: rgb(180, 180, 180);
+  color: $secondarycolor;
   font-size: 44px;
-  border: 1px solid rgb(180, 180, 180);
+  border: 1px solid $secondarycolor;
   height: 162px;
   width: 162px;
   border-radius: 6px;
@@ -80,17 +80,17 @@
   align-items: center;
   text-align: center;
   transition: 0.2s;
-    &:hover {
-      color: $primarycolor;
-      border: 1px solid $primarycolor;
-      i {
-        color: $primarycolor;
-      }
-    }
+    // &:hover {
+    //   color: $primarycolor;
+    //   border: 1px solid $primarycolor;
+    //   i {
+    //     color: $primarycolor;
+    //   }
+    // }
 }
 
 .my-format-preferences-card .format-icon {
-  color: rgb(180, 180, 180);
+  color: $secondarycolor;
   font-size: 44px;
 }
 
