page refresh on preference save & star rating

--- a/app/views/my_account/_my_profile.html.erb
+++ b/app/views/my_account/_my_profile.html.erb
@@ -82,3 +82,13 @@
   </div>
 </div>
 </div>
+
+<script>
+setTimeout(
+  const target = document.querySelector(".profile-button")
+
+  target.addEventListener('click', (e) => {
+    e.currentTarget.innerHTML = "<button id='saved-preferences'> Saved!</button>"
+  })
+, 50);
+</script>
