--- a/app/assets/stylesheets/components/_my_account_container.scss
+++ b/app/assets/stylesheets/components/_my_account_container.scss
@@ -165,3 +165,13 @@
       background-color: $turquoise;
     }
   }
+
+#saved-preferences {
+  border-radius: 50rem;
+  padding: 6px 12px;
+  color: white;
+  font-size: 20px;
+  border: 1px solid $turquoise;
+  background-color: $turquoise;
+  transition: 0.2s;
+}
